force-app/main/default/objects/sugati__Approver__c/sugati__Approver__c.object-meta.xml
<CustomObject>
    <label>Approver</label>
    <nameField>
        <displayFormat>AP-{00000}</displayFormat>
        <label>Approver Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approvers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>