force-app/main/default/objects/sugati__Approver__c/fields/sugati__AP_Primary_Approver__c.field-meta.xml
<CustomField>
    <fullName>sugati__AP_Primary_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approves_Primary</relationshipName>
    <type>Lookup</type>
</CustomField>