force-app/main/default/objects/sugati__Approver__c/fields/sugati__AP_Secondary_Approver__c.field-meta.xml
<CustomField>
    <fullName>sugati__AP_Secondary_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approves_Secondary</relationshipName>
    <type>Lookup</type>
</CustomField>