force-app/main/default/objects/sugati__Approver__c/fields/sugati__AP_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__AP_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>