force-app/main/default/objects/sugati__Approver__c/fields/sugati__AP_User__c.field-meta.xml
<CustomField>
    <fullName>sugati__AP_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approvers</relationshipName>
    <type>Lookup</type>
</CustomField>